# wordlesolve

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
tests/: test_console.py  test_main.py  test_ruleset.py  test_solutions.txt  test_solver.py
wordlesolve/: __init__.py  __main__.py  console.py  ruleset.py  solver.py  wordlist.py
