[metadata]
name = wordlesolve
version = 0.1.0
author = Neil Martin
author_email = neilmartin12@me.com
description = wordlesolve solves Wordle!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neilmartin12/wordlesolve
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = wordlesolve
packages = find:
python_requires = >=3.8
install_requires =
    wordfreq
    colorama

[options.packages.find]
where = wordlesolve
